# amazon-paapi5-python-sdk

./: CONTRIBUTING.md  MIGRATION_OFFERS_V1_TO_V2.md  OFFERSV2_IMPLEMENTATION_SUMMARY.md  OFFERSV2_README.md  OFFERSV2_VERIFICATION_CHECKLIST.md  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  python-app.yml  python-package-conda.yml  python-package.yml  python-publish.yml
examples/: get_browse_nodes.py  get_items.py  get_variations.py  offersv2_example.py  search_items.py
src/amazon_paapi5/: __init__.py  client.py  exceptions.py  resource_constants.py
src/amazon_paapi5/models/: __init__.py  get_items.py  get_variations.py  search_items.py
src/amazon_paapi5/models/offersv2/: __init__.py  availability.py  condition.py  deal_details.py  loyalty_points.py  merchant_info.py  money.py  offer_listing.py  offersv2.py  price.py  saving_basis.py  savings.py
src/amazon_paapi5/security/: credential_manager.py
src/amazon_paapi5/utils/: async_helper.py  cache.py
src/amazon_paapi5_python_sdk.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_client.py
