[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[project]
name = "amazon-paapi5-python-sdk"
version = "1.0.1"
description = "Amazon Product Advertising API v5 Python SDK (Most Advance SDK)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Hitesh Rajpurohit"}
]
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "cachetools>=5.0.0",
    "cryptography>=3.4.8",
]

[project.optional-dependencies]
redis = ["redis>=4.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/rajpurohithitesh/amazon-paapi5-python-sdk"